# aurora-silo-tests

./: Cargo.toml  README.md
res/: aurora-testnet-2.7.0.wasm  aurora-testnet-2.8.0-set-owner-with-logs.wasm  aurora-testnet-2.8.0-set-owner.wasm  aurora-testnet-2.8.0.wasm  aurora-testnet-2.8.1-set-owner.wasm  aurora-testnet-2.8.1.wasm  aurora-testnet-can't-scrub-zeros-borsh.wasm  aurora-testnet-feat-change-admin.wasm  aurora-testnet-set-admin-methods.wasm  aurora-testnet-set-owner.wasm  aurora-testnet-string.wasm  aurora-testnet-test.wasm  aurora-testnet-test10.wasm  aurora-testnet-test11.wasm  aurora-testnet-test12.wasm  aurora-testnet-test13.wasm  aurora-testnet-test2.wasm  aurora-testnet-test3.wasm  aurora-testnet-test4.wasm  aurora-testnet-test5.wasm  aurora-testnet-test6.wasm  aurora-testnet-test8.wasm  aurora-testnet-test9.wasm  aurora-testnet-try.wasm  aurora-testnet-wru.wasm  aurora-testnet.wasm  sputnikdao2.wasm  sputnikdao_factory2.wasm
src/: common.rs  main.rs  main2.rs-old  test.rs
